Finalizando la estructura de la página index

--- a/index.html
+++ b/index.html
@@ -12,15 +12,21 @@
                 <ul>
                     <li><a href="">Inicio</a></li>
                     <li><a href="">Carreras Técnicas</a></li>
+                    <li><a href="">Clasesa</a></li>
+                    <li><a href="">Inscripción</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
             </nav>
-            <section>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos enim fugiat sunt repudiandae temporibus sed possimus vitae quo quibusdam. Rerum ipsa quos expedita ratione, nemo aliquid vel corporis optio! Nihil?
-            </section>
-            <aside>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta non ea, pariatur dolores tempora esse aspernatur praesentium tenetur quam, doloribus nam doloremque? Iure sint, illum temporibus nulla eaque laudantium animi?
-            </aside>
+            <hr>
+            <div id="Contenido">
+                <p>
+                    Kinal es un Centro Educativo privado, no lucrativo, dirigido a la formación técnica profesional de jóvenes y adultos, de beneficio colectivo y asistencia social en favor de los sectores más necesitados de la comunidad.
+
+                    Nuestro valor fundamental es enseñar a realizar el trabajo bien hecho, que sea la base de la superación de alumnos y el medio para servir a los demás.
+                </p>
+                <img src="./assets/images/principal.png" alt="Kalum">
+            </div>
+            <br>
             <footer>
                 Todos los derechos reservados &copy; Kalum v1.0.0
             </footer>
