Aplicando hoja de estilos

--- a/contacto.html
+++ b/contacto.html
@@ -2,19 +2,21 @@
     <head>
         <meta charset="UTF-8">
         <title>Sistema de control acedémico Kalum</title>
+        <link rel="stylesheet" href="./assets/css/style.css">
     </head>
     <body>
         <div>
             <header>
                 <h1>Sistema de Control Académico KALUM V1.0.0</h1>
             </header>
-            <nav>
+            <nav id="menu">
                 <ul>
                     <li><a href="./index.html">Inicio</a></li>
                     <li><a href="./carreras-tecnicas.html">Carreras Técnicas</a></li>
                     <li><a href="./clases.html">Clases</a></li>
                     <li><a href="./inscripcion.html">Inscripción</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
+                    <div  class="clearFix"></div>
                 </ul>
             </nav>
             <hr>
