Finalizando el diseño de la pagina

--- a/carreras-tecnicas.html
+++ b/carreras-tecnicas.html
@@ -20,8 +20,8 @@
                 </ul>
             </nav>
             <hr>
-            <div id="Contenido">x
-                <h2>
+            <div id="Contenido">
+                <h2>Carreras Técnicas</h2>
                     <table border="1px">
                         <tr>
                             <th>Mecánica Automotriz</th>
@@ -36,7 +36,6 @@
                             <td><img src="./assets/images/tics.jpg" alt="Tic's" height="200px"></td>
                         </tr>
                     </table>
-                </h2>
             </div>
             <br>
             <footer>
