--- a/clases.html
+++ b/clases.html
@@ -16,7 +16,7 @@
                     <li><a href="./clases.html">Clases</a></li>
                     <li><a href="./inscripcion.html">Inscripción</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
-                    <div class="fixClear"></div>
+                    <div class="clearFix"></div>
                 </ul>
             </nav>
             <hr>
