--- a/inscripcion.html
+++ b/inscripcion.html
@@ -16,7 +16,7 @@
                     <li><a href="./clases.html">Clases</a></li>
                     <li><a href="./inscripcion.html">Inscripción</a></li>
                     <li><a href="./contacto.html">Contacto</a></li>
-                    <div class="fixClear"></div>
+                    <div class="clearFix"></div>
                 </ul>
             </nav>
             <hr>
@@ -32,13 +32,14 @@
                     </p>
                     <p>
                         <label for="clase">Clases:</label>
-                        <select name="clase"">
+                        <select name="clase">
                             <option value="Seleccionar">Seleccionar</option>
                             <option value="BCK-JAVA">BackEnd Java</option>
                             <option value="BCK-DOTNET">BackEnd Dotnet</option>
                             <option value="FRO-ANGULAR">FrontEnd Angular</option>
                             <option value="FRO-REACT">FrontEnd React<Fr/option>
                         </select>
+                        <button>Registrar</button>
                     </p>
                 </form>
             </div>
