Diseño de feature/contacto

--- a/contacto.html
+++ b/contacto.html
@@ -22,6 +22,27 @@
             <hr>
             <div id="Contenido">
                <h2>Contacto:</h2>
+               <form action="" id="formulario">
+                   <p>
+                       <label for="">Nombre</label>
+                       <div>
+                           <input type="text" name="nombre" id="nombre">
+                       </div>
+                   </p>
+                   <p>
+                       <label for="">Email</label>
+                       <div>
+                           <input type="text" name="email" id="email">
+                       </div>
+                   </p>
+                   <p>
+                       <label for="" id="mensaje">Mensaje</label>
+                       <div>
+                           <input type="text" name="mensaje" id="mensaje" style="text-align:start;">
+                       </div>
+                   </p>
+                   <button type="submit">Enviar</button>
+               </form>
             </div>
             <br>
             <footer>
