--- a/inscripcion.html
+++ b/inscripcion.html
@@ -22,7 +22,7 @@
             <hr>
             <div id="Contenido">
                 <h2>Ficha de Inscripción</h2>
-                <form action="">
+                <form action="" id="inscri">
                     <p>
                         <label for="carne">Carné</label>
                         <div>
